Bug 329970 - textRole property missing for LineGraph
Summary: textRole property missing for LineGraph
Status: RESOLVED FIXED
Alias: None
Product: kqtquickcharts
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Gottfried
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-14 20:15 UTC by Andreas Cord-Landwehr
Modified: 2014-01-25 09:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Cord-Landwehr 2014-01-14 20:15:22 UTC
LineGraphs do not provide a textRole property like, e.g., BarGraphs.
The property should be available for consistency.
Comment 1 Sebastian Gottfried 2014-01-25 09:54:58 UTC
Git commit bb487de53eca005e8cf8d02e4f100dac2cc0769d by Sebastian Gottfried.
Committed on 25/01/2014 at 09:49.
Pushed by gottfried into branch 'master'.

line graphs: new 'textRole' property

Bar graphs have it, so line graphs should, too. The labels for the
datapoint are displayed directly beneath them, if a role is set.

M  +1    -20   src/bargraphcore.cpp
M  +0    -6    src/bargraphcore.h
M  +19   -1    src/graphcore.cpp
M  +5    -1    src/graphcore.h
M  +14   -0    src/linegraphpoint.cpp
M  +3    -0    src/linegraphpoint.h
M  +9    -0    src/qml/LineGraph.qml

http://commits.kde.org/kqmlgraphplugin/bb487de53eca005e8cf8d02e4f100dac2cc0769d