line graphs: new 'textRole' property

Bar graphs have it, so line graphs should, too. The labels for the
datapoint are displayed directly beneath them, if a role is set.

BUG: 329970